--- a/pages/games/index.html
+++ b/pages/games/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/pages/games/index.tsx"></script>
+    <script type="module" src="/src/components/pages/games/index.tsx"></script>
   </body>
 </html>
